<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_composition</name>
  <version>0.0.1</version>
  <description>Examples for composing multiple nodes in a single process.</description>

  <maintainer email="ggeesara@gmail.com">Geesara</maintainer>

  <license>TODO</license>

  <author email="ggeesara@gmail.com">Geesara</author>
 

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>friend_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>rcutils</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>friend_msgs</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>rcutils</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
